--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -52,7 +52,7 @@ const { href, title, body } = Astro.props;
         </a>
       </li>
       <li class="main-nav__item">
-        <button class="main-nav__link" data-micromodal-trigger="modal-past">
+        <button type="button" class="main-nav__link" data-micromodal-trigger="modal-past">
           <picture>
             <source srcset="/assets/images/icon-menu-past.svg" media="(min-width: 768px)" width="84" height="150">
             <img src="/assets/images/icon-history.svg" class="main-nav__image" alt="" width="24" height="24">
