--- a/src/pages/store/index.astro
+++ b/src/pages/store/index.astro
@@ -29,6 +29,7 @@ type store = {
     appetizer_image: string,
     sake_service: string,
     sake_pref: string,
+    sake_temp: [],
     store_url: string,
     store_image1: undefined | {
       url: string,
@@ -107,6 +108,11 @@ stores.forEach(store => {
     store.image.url = 'https://data.nga-osaka.com/2023/wp-content/uploads/2023/08/preparation-image16-9.jpg';
   }
   store.station = store.acf.store_station.includes('駅') ? store.acf.store_station : store.acf.store_station + '駅';
+  store.temperature = '';
+  store.acf.sake_temp.forEach((temp, index) => {
+    const tempText = temp.value;
+    store.temperature += index === 0 ? tempText : '・' + tempText;
+  });
 });
 ---
 
@@ -138,6 +144,7 @@ stores.forEach(store => {
             <label class="display-panel__label"><input type="checkbox" name="display-filter" class="display-panel__input" value="Image" checked><img src="/assets/images/icon-image.svg" width="18" height="18" alt="">画像</label>
             <label class="display-panel__label"><input type="checkbox" name="display-filter" class="display-panel__input" value="Food" checked><img src="/assets/images/icon-food.svg" width="18" height="18" alt="">付き出し</label>
             <label class="display-panel__label"><input type="checkbox" name="display-filter" class="display-panel__input" value="Sake" checked><img src="/assets/images/icon-sake.svg" width="18" height="18" alt="">振る舞い酒</label>
+            <label class="display-panel__label"><input type="checkbox" name="display-filter" class="display-panel__input" value="Temp" checked><img src="/assets/images/icon-temp.svg" width="18" height="18" alt="">提供温度</label>
             <label class="display-panel__label"><input type="checkbox" name="display-filter" class="display-panel__input" value="Time" checked><img src="/assets/images/icon-time.svg" width="18" height="18" alt="">イベント時間</label>
             <label class="display-panel__label"><input type="checkbox" name="display-filter" class="display-panel__input" value="Seat" checked><img src="/assets/images/icon-seat.svg" width="18" height="18" alt="">座席数</label>
             <label class="display-panel__label"><input type="checkbox" name="display-filter" class="display-panel__input" value="Station" checked><img src="/assets/images/icon-train.svg" width="18" height="18" alt="">最寄り駅</label>
@@ -163,6 +170,7 @@ stores.forEach(store => {
          data-display-image="true"
          data-display-food="true"
          data-display-sake="true"
+         data-display-temp="true"
          data-display-time="true"
          data-display-seat="true"
          data-display-station="true"
@@ -179,6 +187,7 @@ stores.forEach(store => {
                     <div class="store-content">
                       <p class="store-content__appetizer"><img src="/assets/images/icon-food.svg" width="18" height="18" alt="">{store.acf.appetizer_name}</p>
                       <p class="store-content__sake"><img src="/assets/images/icon-sake.svg" width="18" height="18" alt="">{store.acf.sake_service}</p>
+                      <p class="store-content__temp"><img src="/assets/images/icon-temp.svg" width="18" height="18" alt="">{store.temperature}</p>
                       <p class="store-content__time"><img src="/assets/images/icon-time.svg" width="18" height="18" alt="">{store.acf.event_start}〜{store.acf.event_end}</p>
                       <p class="store-content__seat"><img src="/assets/images/icon-seat.svg" width="18" height="18" alt="">立食 {store.acf.capacity_standing}名/着席 {store.acf.capacity_sitting}名/合計 {Number(store.acf.capacity_standing) + Number(store.acf.capacity_sitting)}名</p>
                       <p class="store-content__station"><img src="/assets/images/icon-train.svg" width="18" height="18" alt="">{store.station}</p>
@@ -425,6 +434,9 @@ function sortByAttribute(attribute, ascending = true) {
     &[data-display-sake="false"] .store-content__sake {
       display: none;
     }
+    &[data-display-temp="false"] .store-content__temp {
+      display: none;
+    }
     &[data-display-time="false"] .store-content__time {
       display: none;
     }
@@ -434,7 +446,7 @@ function sortByAttribute(attribute, ascending = true) {
     &[data-display-station="false"] .store-content__station {
       display: none;
     }
-    &[data-display-food="false"][data-display-sake="false"][data-display-time="false"][data-display-seat="false"][data-display-station="false"] .store-link{
+    &[data-display-food="false"][data-display-sake="false"][data-display-temp="false"][data-display-time="false"][data-display-seat="false"][data-display-station="false"] .store-link{
       padding-bottom: 0;
     }
   }
